--- a/css/app.css
+++ b/css/app.css
@@ -8,7 +8,7 @@ html {
 	box-sizing: border-box;
 	font-size: 14px;
 }
-/*endregion*/
+/*#endregion*/
 
 
 
@@ -16,6 +16,7 @@ html {
 =====================================================*/
 /* COMMON TAGS AND HELPER CLASSES
 --------------------------------------------*/
+/*#region Common elements*/
 body {
 	font: 1em/1.5 'Roboto', Helvetica, Arial, sans-serif;
 	background: #f5f5f5;
@@ -53,10 +54,12 @@ button {
 .hide {
 	display: none!important;
 }
+/*#endregion*/
 
 
 /* APP CONTAINER SECTION
 --------------------------------------------*/
+/*#region Container*/
 .todoapp {
 	background: #fff;
 	position: relative;
@@ -160,10 +163,12 @@ button {
 .toggle-all:checked + label:before {
 	color: #5DC2AF;
 }
+/*#endregion*/
 
 
 /* TODO LIST
 --------------------------------------------*/
+/*#region List*/
 .todo-list {
 	margin: 0;
 	padding: 0;
@@ -308,9 +313,12 @@ button {
 .todo-count strong {
 	font-weight: 300;
 }
+/*#endregion*/
+
 
 /* FILTERS
 --------------------------------------------*/
+/*#region Filters*/
 .filters {
 	margin: 0;
 	padding: 0;
@@ -393,9 +401,13 @@ html .clear-completed:active {
 .info a:hover {
 	text-decoration: underline;
 }
+/*#endregion*/
 
 
 
+/* MEDIA QUERIES
+=====================================================*/
+/*#region Media queries*/
 /*
 	Hack to remove background from Mobile Safari.
 	Can't use it globally since it destroys checkboxes in Firefox
@@ -420,73 +432,4 @@ html .clear-completed:active {
 		bottom: 10px;
 	}
 }
-
-
-
-/* MANUAL INPUT VARIANTE
------------------------------------------------*/
-.manual-input {
-	background: #fff;
-	padding: 3em 5%;
-}
-
-.manual-input h1,
-.manual-input h2 {
- text-align: center;
- font-size: 2em;
- line-height: 1.3;
-}
-.manual-input h2 {
-	font-size: 1.5em;
-	margin: 0 0 2em 0;
-}
-
-.row {
-	display: flex;
-	justify-content: flex-end;
-	max-width: 400px;
-	margin: 0 auto 1.5em;
-}
-.row button {
-	background-color: #f1f1f1;
-	color: #333;
-	padding: .5em 1em;
-	cursor: pointer;
-	min-width: 110px;
-	margin-left: 5px;
-	transition: background-color .3s ease, color .3s ease;
-}
-.row button:hover {
-	background-color: #ccc;
-	color: #000;
-}
-.row input {
-	border: solid 1px #ccc;
-	padding: .5em;
-}
-
-.row input::-webkit-input-placeholder {
-	font-weight: 300;
-	color: #d1d1d1;
-}
-
-.row input::-moz-placeholder {
-	font-weight: 300;
-	color: #d1d1d1;
-}
-
-.row .index {
-	width: 100%;
-	max-width: 60px;
-	margin-right: 5px;
-}
-.row .text {
-	width: 100%;
-	max-width: 200px;
-}
-.row .text.long {
-	max-width: 280px;
-}
-.row .M0 {
-	margin: 0;
-}
+/*#endregion*/
